--- a/tst.html
+++ b/tst.html
@@ -3,12 +3,7 @@
 <head>
     <title></title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <style type="text/css">
-    .main{background: #333; min-height: 400px; margin: auto; width: 500px;}
-    .box1{background: #aaa; margin: 5px; width: 98%; float: left;}
-    .box2{background: #eee; margin: 5px; width: 98%; float: left; min-height: 360px;}
-
-    </style>
+    <link rel="stylesheet" href="css/main.css"/ type="text/css">
 
 </head>
 <body>
